Finished follow suggestion component styles

--- a/projects/00-hello-world/src/components/TwitterCard.css
+++ b/projects/00-hello-world/src/components/TwitterCard.css
@@ -1,5 +1,5 @@
 .twitterCard-container {
-  background-color: rgb(62, 62, 62);
+  background-color: rgb(46, 46, 46);
   color: #fff;
   padding: 10px;
   border-radius: 10px;
@@ -7,4 +7,11 @@
 
 .twitterCard-title {
   font-size: 17px;
+  padding-bottom: 15px;
+}
+
+.followSuggestions-container {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
