--- a/projects/00-hello-world/src/components/FollowSuggestion.css
+++ b/projects/00-hello-world/src/components/FollowSuggestion.css
@@ -1,7 +1,13 @@
 .suggestion-body {
+  padding: 10px 13px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.suggestion-body:hover {
+  background-color: rgb(54, 54, 54);
+  border-radius: 0 0 10px 10px;
 }
 
 .avatar {
@@ -14,6 +20,11 @@
   margin-right: 40px;
 }
 
+.user-name:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .user-nickname {
   font-size: 90%;
   color: rgb(140, 140, 140);
@@ -22,7 +33,13 @@
 .suggestion-button {
   border: none;
   outline: none;
-  padding: 6px 13px;
+  padding: 8px 13px;
   border-radius: 30px;
   cursor: pointer;
+  font-weight: 600;
+  transition: 0.3s ease opacity;
+}
+
+.suggestion-button:hover {
+  opacity: 0.8
 }
