Fixed hover issue and change button text to Following when it is active

--- a/projects/00-hello-world/src/components/TwitterCard.css
+++ b/projects/00-hello-world/src/components/TwitterCard.css
@@ -2,11 +2,12 @@
   background-color: rgb(46, 46, 46);
   color: #fff;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .twitterCard-title {
   font-size: 17px;
-  padding: 15px;
+  padding: 15px 15px 10px;
 }
 
 .followSuggestions-container {
