--- a/projects/00-hello-world/src/components/FollowSuggestion.css
+++ b/projects/00-hello-world/src/components/FollowSuggestion.css
@@ -58,6 +58,7 @@
   border: 1.8px solid #EFEFEF;
   background-color: transparent;
   transition: 0.3s ease all;
+  width: 110px;
 }
 
 .suggestion-button.following:hover {
